--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,7 @@ title                    : "Home" 
 title_separator          : "-"
 name                     : &name "Chen Yiwen" 
 description              : &description "Keep Happy Keep Healthy&Full of hope, we will be invincible"   # Update this with a general description of your site, this is the default if not overridden by a page 
-url                      : https://sum2dou.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",  
-# or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+url                      : https://sum2dou.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"  
 repository               : "sum2dou/sum2dou.github.io" 
 
