--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ name                     : &name "Chen Yiwen" 
 description              : &description "Keep Happy Keep Healthy&Full of hope, we will be invincible"   # Update this with a general description of your site, this is the default if not overridden by a page 
 url                      : https://sum2dou.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"  
-repository               : "sum2dou/sum2dou.github.io" 
+repository               : "Sum2dou/sum2dou.github.io" 
 
 # Site Author - The following control what appear as part of the author content on the side bar. 
 #               If a field is blank the icon and link will not appear, otherwise it will be shown. 
