--- a/_config.yml
+++ b/_config.yml
@@ -7,29 +7,30 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US" 
+locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Home" 
+title                    : "Your Name / Site Title"
 title_separator          : "-"
-name                     : &name "Chen Yiwen" 
-description              : &description "Keep Happy Keep Healthy&Full of hope, we will be invincible"   # Update this with a general description of your site, this is the default if not overridden by a page 
-url                      : https://sum2dou.github.io
-baseurl                  : "" # the subpath of your site, e.g. "/blog"  
-repository               : "Sum2dou/sum2dou.github.io" 
+name                     : &name "Your Name"
+description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+url                      : https://academicpages.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
+                                                           # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
+baseurl                  : "" # the subpath of your site, e.g. "/blog"
+repository               : "academicpages/academicpages.github.io"
 
-# Site Author - The following control what appear as part of the author content on the side bar. 
-#               If a field is blank the icon and link will not appear, otherwise it will be shown. 
-#               Additional customization can be done by editing /_includes/author-profile.html 
+# Site Author - The following control what appear as part of the author content on the side bar.
+#               If a field is blank the icon and link will not appear, otherwise it will be shown.
+#               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Yiwen Chen" 
-  pronouns         : # example: "she/her"
-  bio              : "Keep happy  Keep healthy & Full of hope, we will be invincible." 
+  name             : "Your Sidebar Name"
+  pronouns         : # example: "she/her"  
+  bio              : "Short biography for the left-hand sidebar"
   location         : "Earth"
-  employer         : #"Red Brick University"
+  employer         : "Red Brick University"
   uri              : # URL
-  email            : #"none@example.org"  
+  email            : "none@example.org" 
 
   # Academic websites
   academia         : # URL
@@ -62,7 +63,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         :  "https://www.linkedin.com/in/yiwen-chen-1b47a4286/" 
+  linkedin         : # Username
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
