--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default" # Currently available options are "default"
 title                    : "HOME"
 title_separator          : "-"
 name                     : &name "Yiwen Chen"
-description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : &description "Keep Happy Keep Healthy&Full of hope, we will be invincible."   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://sum2dou.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
@@ -26,7 +26,7 @@ author:
   avatar           : "profile.png"
   name             : "Yiwen Chen"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Keep Happy Keep Healthy&Full of hope, we will be invincible."
   location         : "Earth"
   employer         : #"Red Brick University"
   uri              : # URL
