--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,7 +21,7 @@ main:
     url: /portfolio/
         
   - title: "Miscs"
-    url: /miscs/
+    url: /misc/
     
   #- title: "CV"
    # url: /cv/
